--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ android:
   - addon-google_apis-google-$ANDROID_API_LEVEL
 script:
 - "./gradlew clean"
-- "./gradlew build test"
+- "./gradlew assemble test"
 before_install:
-- openssl aes-256-cbc -K $encrypted_ab09f80ebc8e_key -iv $encrypted_ab09f80ebc8e_iv
-  -in keystore.properties.enc -out keystore.properties -d
+#- openssl aes-256-cbc -K $encrypted_ab09f80ebc8e_key -iv $encrypted_ab09f80ebc8e_iv
+  #-in keystore.properties.enc -out keystore.properties -d
 - mkdir "$ANDROID_HOME/licenses" || true
 - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
