--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ try {
 android {
   signingConfigs {
     debug {
-      keyAlias keystoreProperties['keyAlias']
-      keyPassword keystoreProperties['keyPassword']
-      storeFile file(keystoreProperties['storeFile'])
-      storePassword keystoreProperties['storePassword']
+      //keyAlias keystoreProperties['keyAlias']
+      //keyPassword keystoreProperties['keyPassword']
+      //storeFile file(keystoreProperties['storeFile'])
+      //storePassword keystoreProperties['storePassword']
     }
     release {
       keyAlias keystoreProperties['keyAlias']
