--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,16 @@ try {
   keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 } catch (Exception ex) {
   // do nothing for now. Potentially throw in something else later?
+  keystoreProperties['storeFile'] = 'foobar'
 }
 
 android {
   signingConfigs {
     debug {
-      //keyAlias keystoreProperties['keyAlias']
-      //keyPassword keystoreProperties['keyPassword']
-      //storeFile file(keystoreProperties['storeFile'])
-      //storePassword keystoreProperties['storePassword']
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
     }
     release {
       keyAlias keystoreProperties['keyAlias']
