updated to test local tests only again, oops forgot

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ android:
   - addon-google_apis-google-$ANDROID_API_LEVEL
 script:
 - "./gradlew clean"
-- "./gradlew assemble testUnitTest"
+- "./gradlew assemble test"
 before_install:
 #- openssl aes-256-cbc -K $encrypted_ab09f80ebc8e_key -iv $encrypted_ab09f80ebc8e_iv
   #-in keystore.properties.enc -out keystore.properties -d
