--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ def keystoreProperties = new Properties()
 try {
   keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 } catch (Exception ex) {
-  // do nothing for now. Potentially throw in something else later?
+  // setting bad value for storeFile so signingConfigs:release won't complain
+  //  about 'null' value
   keystoreProperties['storeFile'] = 'foobar'
 }
 
