--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     </activity>
     <activity android:name=".profiletask.ProfileActivity" />
     <activity android:name=".searchtask.SearchActivity" />
+    <activity android:name=".favoritestask.FavoritesActivity" />
     <activity
       android:name=".logintask.LoginActivity"
       android:theme="@style/AppTheme.NoActionBar" />
